Adding Personal Data

--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,26 @@
         <title> RamiBoureslan - Resume</title>       
     </head>
     <body>
-          
+        <header> 
+            <h1><center> Rami Bou Reslan </center></h1>          
+                <center> 
+                    <strong> Date of Birth: </strong> 25/11/1994   
+                    &nbsp; &nbsp; <strong> Nationality: </strong>  Lebanese 
+                </center>
+                <hr>
+                <table>
+                    <tr>
+                        <th>Phone: </th>
+                        <td> (+961) 76123667 </td>
+                    </tr>
+                    <tr>
+                        <th>Email: </th>
+                        <td> reboureslan@gmail.com </td>
+                    </tr> 
+                    <tr>
+                        <th>Adress:</th> 
+                        <td>Boureslan Building, First Floor, Main Street, 0000 Ras El Metn, Lebanon (Home) </td> 
+                    </tr> 
+                </table>  
     </body>
 </html>
