Enclosing a request form and footer

--- a/resume.html
+++ b/resume.html
@@ -218,5 +218,50 @@
             Team-Work Oriented | Microsoft Word | Microsoft Excel | Microsoft Powerpoint | Outlook | Open Source Internet Research 
             </p> 
         </section>
+        <hr>
+        <div> 
+            <h2> CONNECTION REQUEST FORM </h2>
+            <form action = "resume.html" method="post">
+                
+                <label for ="full-name "> Full Name : </label>
+                <input type = "text" id = "full-name" name = "full-name" placeholder = "Enter your full name">
+                <br>  <br>
+
+                <label for = "email"> Email Address: </label>
+                <input type = "email" id = "email" name = "email" placeholder="Enter your email adress">
+                <br>  <br>
+
+                <label for ="phone-number"> Phone Number: </label>
+                <input type = "tel" id="phone-number" name="phone-number" placeholder="Enter your phone number">
+                <br>  <br>
+
+                <label for = "recruitment-type"> Employer Type: </label>
+                <select id="recruitment-type" name = "recruitment-type">
+                    <option value="sel"> Select </option>
+                    <option value="rec"> Recruitment Egency </option>
+                    <option value="imp"> Company HR </option>
+                    <option value="uni">University Alumni</option>
+
+                </select> <br> <br>
+
+                <label> Job Type: </label><br>
+                <input type="radio" id="full-time" name="type" value="full-time">
+                <label for="full-time"> Full Time </label><br>
+                <input type="radio" id="part-time" name = "type" value="part-time">
+                <label for="part-time"> Part Time </label><br> <br>
+
+                <label for="job-title"> <strong>Job Title and Description</strong></label><br>
+                <textarea id="job-title" name="job-title" rows="10" cols="50" placeholder= "Enter the job title and description that you want me to apply for."></textarea>
+                <br><br>
+
+                <button> Submit </button>
+            </form>
+        </div> <hr>
+        <footer>
+            <h5> For any additional information check out my LinkedIn profile: <em><a href="http://linkedin.com/in/rami-boureslan"> Rami Bou Reslan </a></em> 
+            ; or contact me directly through the email or phone number mentioned previously above.
+            </h5>
+
+        </footer>
     </body>
 </html>
